--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:support-annotations:27.1.1"
+
 
     // android architecture components
     implementation "android.arch.persistence.room:runtime:1.1.0"
@@ -44,4 +46,14 @@ dependencies {
     implementation "android.arch.lifecycle:runtime:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+    //Material drawer dependencies:
+    //https://github.com/mikepenz/MaterialDrawer
+    //check for newest releases here: https://github.com/mikepenz/MaterialDrawer/releases
+    implementation("com.mikepenz:materialdrawer:6.0.7@aar") {
+        transitive = true
+    }
+    // Icons for use
+    implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
+
 }
