--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name="org.liebald.android.cula.ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.updateLibrary.UpdateLibraryActivity"
-            android:parentActivityName=".ui.main.MainActivity" />
+            android:name="org.liebald.android.cula.ui.updateLibrary.UpdateLibraryActivity"
+            android:parentActivityName="org.liebald.android.cula.ui.main.MainActivity" />
     </application>
 
 </manifest>
