--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     implementation 'com.android.support:preference-v14:27.1.1'
 
     // android architecture components
-    implementation "android.arch.persistence.room:runtime:1.1.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.lifecycle:runtime:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
@@ -57,5 +57,9 @@ dependencies {
     }
     // Icons to use
     implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
+
+    // Firebase job dispatcher
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+
 
 }
