--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="org.liebald.android.cula.ui.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
@@ -22,9 +22,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.liebald.android.cula.ui.updateLibrary.UpdateLibraryActivity"
-            android:parentActivityName="org.liebald.android.cula.ui.main.MainActivity" />
-
+            android:name=".ui.updateLibrary.UpdateLibraryActivity"
+            android:parentActivityName=".ui.main.MainActivity" />
+        <activity
+            android:name=".ui.updateLesson.UpdateLessonActivity"
+            android:parentActivityName=".ui.main.MainActivity" />
         <service
             android:exported="false"
             android:name=".services.UpdateQuoteJobService">
