added viewmodel for training activity and query for Trainingsets.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         <activity
             android:name=".ui.updateLesson.UpdateLessonActivity"
             android:parentActivityName=".ui.main.MainActivity" />
-        <activity android:name=".ui.training.TrainingActivity" />
-
+        <activity
+            android:name=".ui.training.TrainingActivity"
+            android:parentActivityName=".ui.main.MainActivity" />
         <service
             android:exported="false"
             android:name=".services.UpdateQuoteJobService">
