--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,23 @@
         <activity
             android:name=".ui.training.TrainingActivity"
             android:parentActivityName=".ui.main.MainActivity" />
+
         <service
-            android:exported="false"
-            android:name=".services.UpdateQuoteJobService">
+            android:name=".services.UpdateQuoteJobService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".widget.CulaWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/cula_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
