--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        //firebase crashlytics
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        
-
+        //firebase/google play services
+        classpath 'com.google.gms:google-services:4.0.1'
+        //firebase crashlytics
+        classpath 'io.fabric.tools:gradle:1.25.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +24,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        //firebase crashlytics
+        maven { url 'https://maven.google.com/' }
     }
 }
 
