--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'cula'
+            keyPassword 'password'
+            storeFile file('../keystore.jks')
+            storePassword 'password'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.sliebald.cula"
@@ -19,6 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
@@ -31,45 +40,38 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation "com.android.support:support-annotations:27.1.1"
+    implementation 'com.android.support:support-annotations:27.1.1'
     // for preferenceFragmentCompat
     implementation 'com.android.support:preference-v7:27.1.1'
     implementation 'com.android.support:preference-v14:27.1.1'
-
     // android architecture components
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    implementation "android.arch.lifecycle:runtime:1.1.1"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
     //Material drawer dependencies:
     //https://github.com/mikepenz/MaterialDrawer
     //check for newest releases here: https://github.com/mikepenz/MaterialDrawer/releases
-    implementation("com.mikepenz:materialdrawer:6.0.7@aar") {
+    implementation('com.mikepenz:materialdrawer:6.0.7@aar') {
         transitive = true
     }
     // Icons to use
     implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
-
     // Firebase job dispatcher
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-
     // Graph/chart drawer library
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
     //firebase dependencies, 16.0.1 is available according to android studio but throws exceptions
     implementation 'com.google.firebase:firebase-core:16.0.1'
-
     //firebase crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
-
 }
 
 // add gradle firebase /google services plugin
