--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,14 @@ dependencies {
 
     // Graph/chart drawer library
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    //firebase dependencies, 16.0.1 is available according to android studio but throws exceptions
+    //firebase dependencies
     implementation 'com.google.firebase:firebase-core:16.0.5'
     //firebase crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+
+    // material drawer: https://github.com/jaredrummler/MaterialSpinner
+    implementation 'com.jaredrummler:material-spinner:1.3.0'
+
 }
 
 // add gradle firebase /google services plugin
