--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
@@ -31,6 +32,7 @@
             android:parentActivityName=".ui.main.MainActivity" />
         <activity
             android:name=".ui.training.TrainingActivity"
+            android:windowSoftInputMode="adjustResize"
             android:parentActivityName=".ui.main.MainActivity" />
 
         <receiver android:name=".widget.CulaWidget">
