--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,17 @@ android {
         applicationId "com.sliebald.cula"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+    }
+    lintOptions {
+        disable 'MissingTranslation'
     }
     buildTypes {
         release {
