--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.annotation:annotation:1.0.0'
     // for preferenceFragmentCompat
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0-alpha01'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     // android architecture components
     implementation 'androidx.room:room-runtime:2.1.0-alpha02'
