--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,8 @@
             android:parentActivityName=".ui.main.MainActivity" />
         <activity
             android:name=".ui.training.TrainingActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:parentActivityName=".ui.main.MainActivity" />
+            android:parentActivityName=".ui.main.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
 
         <receiver android:name=".widget.CulaWidget">
             <intent-filter>
