--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ buildscript {
         //firebase/google play services
         classpath 'com.google.gms:google-services:4.2.0'
         //firebase crashlytics
-        classpath 'io.fabric.tools:gradle:1.25.4'
+        // newest  version: https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
+        classpath 'io.fabric.tools:gradle:1.28.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
