refactored training activity into a fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,3 +80,5 @@ dependencies {
 apply plugin: 'com.google.gms.google-services'
 //firebase crashlytics
 apply plugin: 'io.fabric'
+// safeargs
+apply plugin: "androidx.navigation.safeargs"
