--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,15 +27,10 @@
         </activity>
         <activity
             android:name=".ui.updateLibrary.UpdateLibraryActivity"
-            android:parentActivityName=".ui.main.MainActivity" />
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ui.updateLesson.UpdateLessonActivity"
-            android:parentActivityName=".ui.main.MainActivity" />
-        <activity
-            android:name=".ui.training.TrainingActivity"
-            android:parentActivityName=".ui.main.MainActivity"
-            android:windowSoftInputMode="adjustResize" />
-
+            android:parentActivityName=".MainActivity" />
         <receiver android:name=".widget.CulaWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
