--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ buildscript {
         //firebase crashlytics
         // newest  version: https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
         classpath 'io.fabric.tools:gradle:1.28.1'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha01"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
