--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".ui.updateLibrary.UpdateLibraryActivity"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".ui.updateLesson.UpdateLessonActivity"
+            android:name=".ui.updateLesson.UpdateLessonFragment"
             android:parentActivityName=".MainActivity" />
         <receiver android:name=".widget.CulaWidget">
             <intent-filter>
