refactored updateLibraryActivity to fragment using Jetpack navigation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.updateLibrary.UpdateLibraryActivity"
+            android:name=".ui.updateLibrary.UpdateLibraryFragment"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ui.updateLesson.UpdateLessonFragment"
