--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.sliebald.cula"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 10
-        versionName "1.2.0"
+        versionCode 11
+        versionName "1.2.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -36,21 +36,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.annotation:annotation:1.1.0'
     // for preferenceFragmentCompat
-    implementation 'androidx.preference:preference:1.1.0-alpha04'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     // android architecture components
-    implementation 'androidx.room:room-runtime:2.1.0-alpha04'
-    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+    implementation 'androidx.room:room-runtime:2.2.0-rc01'
+    annotationProcessor "androidx.room:room-compiler:2.2.0-rc01"
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.1.0"
 
     // Icons to use
     // https://github.com/mikepenz/Android-Iconics
@@ -58,14 +58,16 @@ dependencies {
     implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
 
     // Graph/chart drawer library
+    // https://github.com/PhilJay/MPAndroidChart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
     //firebase dependencies
-    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
     //firebase crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // material drawer: https://github.com/jaredrummler/MaterialSpinner
-    implementation 'com.jaredrummler:material-spinner:1.3.0'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
 
     // Android navigation component
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
