--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
 
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.sliebald.cula"
         minSdkVersion 24
-        targetSdkVersion 28
-        versionCode 11
-        versionName "1.2.1"
+        targetSdkVersion 29
+        versionCode 123
+        versionName "1.2.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -37,41 +37,45 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
+
     // for preferenceFragmentCompat
-    implementation 'androidx.preference:preference:1.1.0'
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+
     // android architecture components
-    implementation 'androidx.room:room-runtime:2.2.0-rc01'
-    annotationProcessor "androidx.room:room-compiler:2.2.0-rc01"
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.1.0"
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+
+    // Android navigation component
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
 
     // Icons to use
     // https://github.com/mikepenz/Android-Iconics
-    implementation "com.mikepenz:iconics-core:3.2.2"
+    implementation "com.mikepenz:iconics-core:3.2.5"
     implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
 
     // Graph/chart drawer library
     // https://github.com/PhilJay/MPAndroidChart
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     //firebase dependencies
-    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-core:17.4.0'
     //firebase crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // material drawer: https://github.com/jaredrummler/MaterialSpinner
     implementation 'com.jaredrummler:material-spinner:1.3.1'
 
-    // Android navigation component
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
+
 
 }
 
