--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,13 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         //firebase/google play services
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.google.gms:google-services:4.3.3'
         //firebase crashlytics
         // newest  version: https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-alpha02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
