--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
-
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.sliebald.cula"
@@ -37,7 +39,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -49,14 +51,14 @@ dependencies {
 
     // android architecture components
     implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
 
     // Android navigation component
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
 
     // Icons to use
     // https://github.com/mikepenz/Android-Iconics
@@ -68,14 +70,18 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     //firebase dependencies
-    implementation 'com.google.firebase:firebase-core:17.4.0'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
     //firebase crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // material drawer: https://github.com/jaredrummler/MaterialSpinner
     implementation 'com.jaredrummler:material-spinner:1.3.1'
 
-
+    // Kotlin dependencies
+    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    kapt "com.android.databinding:compiler:3.1.4"
 
 }
 
@@ -85,3 +91,6 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 // safeargs
 apply plugin: "androidx.navigation.safeargs"
+repositories {
+    mavenCentral()
+}
