--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
@@ -9,20 +9,21 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'com.android.tools.build:gradle:4.0.1'
         //firebase/google play services
         classpath 'com.google.gms:google-services:4.3.3'
         //firebase crashlytics
         // newest  version: https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
     }
 }
-
 allprojects {
     repositories {
         google()
