--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -18,9 +18,6 @@ android {
             }
         }
     }
-    lintOptions {
-        disable 'MissingTranslation'
-    }
     buildTypes {
         release {
             minifyEnabled false
@@ -37,6 +34,10 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    lint {
+        disable 'MissingTranslation'
+    }
+    namespace 'com.sliebald.cula'
 }
 
 dependencies {
