Remove google services/firebase/analytics/crashlytics

--- a/build.gradle
+++ b/build.gradle
@@ -4,33 +4,25 @@ buildscript {
     ext.kotlin_version = '1.6.21'
     repositories {
         google()
-        jcenter()
-        //firebase crashlytics
-        maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath 'com.android.tools.build:gradle:7.2.0'
-        //firebase/google play services
-        classpath 'com.google.gms:google-services:4.3.3'
-        //firebase crashlytics
-        // newest  version: https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
     }
 }
+
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://www.jitpack.io' }
-        //firebase crashlytics
-        maven { url 'https://maven.google.com/' }
     }
 }
 
